grammar.js
    compilation_unit: $ => seq(
      optional($.shebang),
      optional($._definitions)
    ),

    _definitions: $ => seq(
      repeat(';;'),
      choice($._module_item, $.toplevel_directive, seq($._seq_expression, repeat($.item_attribute))),
      repeat(choice(
        seq(repeat(';;'), choice($._module_item, $.toplevel_directive)),
        seq(repeat1(';;'), seq($._seq_expression, repeat($.item_attribute)))
      )),
      repeat(';;')
    ),

    // Toplevel

    value_specification: $ => seq(
      'val',
      optional($._extension_attribute),
      $.value_name,
      ':',
      $._type,
      repeat($.item_attribute)
    ),

    value_definition: $ => seq(
      choice(
        seq('let', optional($._extension_attribute), optional('rec')),
        $.let_operator
      ),
      sep1(
        choice(
          seq('and', repeat($.attribute)),
          $.and_operator
        ),
        $.let_binding
      )
    ),

    let_binding: $ => seq(
      $._pattern,
      repeat($.parameter),
      optional(seq(':', $._poly_type)),
      optional(seq(':>', $._type)),
      '=',
      $._seq_expression,
      repeat($.item_attribute)
    ),

    parameter: $ => choice(
      $._simple_pattern,
      $.label,
      seq(
        $.label,
        token.immediate(':'),
        $._simple_pattern
      ),
      seq(
        choice('~', '?'),
        '(',
        $._label_name,
        optional(seq(':', $._type)),
        optional(seq('=', $._seq_expression)),
        ')'
      ),
      seq(
        $.label,
        token.immediate(':'),
        '(',
        $._pattern,
        optional(seq(':', $._type)),
        seq('=', $._seq_expression),
        ')'
      ),
      parenthesize($.abstract_type)
    ),

    _type_equation: $ => seq(
      choice('=', ':='),
      optional('private'),
      $._type
    ),

    module_definition: $ => seq(
      'module', optional($._extension_attribute), optional('rec'),
      sep1(seq('and', repeat($.attribute)), $.module_binding)
    ),

    module_binding: $ => seq(
      $._module_name,
      repeat($.module_parameter),
      optional(seq(':', $._module_type)),
      optional(seq('=', $._module_expression)),
      repeat($.item_attribute)
    ),

    module_parameter: $ => parenthesize(optional(seq(
      choice($._module_name, alias('_', $._module_name)),
      ':',
      $._module_type
    ))),

    _module_type: $ => prec.right(seq(
      choice(
        $.module_type_path,
        $.signature,
        $.module_type_constraint,
        $.module_type_of,
        $.functor_type,
        $.parenthesized_module_type,
        $.extension
      ),
      repeat($.attribute)
    )),

    signature: $ => seq(
      'sig',
      repeat($.attribute),
      optional($._definitions),
      'end'
    ),

    module_type_constraint: $ => prec.right(seq(
      $._module_type,
      'with',
      sep1('and', choice(
        seq(
          'type',
          optional($.type_params),
          $.type_constructor_path,
          $._type_equation,
          repeat($.type_constraint)
        ),
        seq(
          'module',
          $._module_expression,
          choice('=', ':='),
          $._module_expression
        )
      ))
    )),

    module_type_of: $ => seq(
      'module', 'type', 'of',
      repeat($.attribute),
      $._module_expression
    ),

    functor_type: $ => prec.right(seq(
      choice(
        seq(
          'functor',
          repeat($.attribute),
          repeat($.module_parameter)
        ),
        $._module_type
      ),
      '->',
      $._module_type
    )),

    parenthesized_module_type: $ => parenthesize($._module_type),

    // Module expressions

    _module_expression: $ => prec.dynamic(1, prec.right(seq(
      choice(
        $._module_name,
        $.structure,
        $.functor,
        $.module_application,
        $.submodule,
        $.typed_module_expression,
        $.packed_module,
        $.parenthesized_module_expression,
        $.extension
      ),
      repeat($.attribute)
    ))),

    structure: $ => seq(
      'struct',
      repeat($.attribute),
      optional($._definitions),
      'end'
    ),

    functor: $ => seq(
      'functor',
      repeat($.module_parameter),
      '->',
      $._module_expression
    ),

    module_application: $ => prec(2, seq(
      $._module_expression,
      parenthesize(optional($._module_expression))
    )),

    typed_module_expression: $ => parenthesize(seq(
      $._module_expression,
      ':',
      $._module_type
    )),

    packed_module: $ => parenthesize(seq(
      'val',
      repeat($.attribute),
      $._expression,
      optional(seq(':', $._module_type)),
      optional(seq(':>', $._module_type))
    )),

    parenthesized_module_expression: $ => parenthesize($._module_expression),

    // Class types

    _poly_type: $ => seq(
      optional(seq($.polymorphic_types, '.')),
      $._type
    ),

    abstract_type: $ => seq('type', repeat1($._type_constructor)),

    _simple_type: $ => choice(
      $.type_variable,
      $.type_constructor_path,
      $.constructed_type,
      $.polymorphic_variant_type,
      $.package_type,
      $.hash_type,
      $.object_type,
      $.parenthesized_type,
      $.extension
    ),

    _type: $ => prec.right(seq(
      choice(
        $._simple_or_tuple_type,
        $.function_type,
        $.aliased_type
      ),
      repeat($.attribute)
    )),

    function_type: $ => prec.right(PREC.seq, seq(
      choice($._typed_label, $._type),
      '->',
      $._type
    )),

    _typed_label: $ => prec.left(PREC.seq, seq(
      optional('?'),
      $._label_name,
      ':',
      $._type
    )),

    tuple_type: $ => prec(PREC.prod, seq(
      choice(
        $._simple_type,
        $.tuple_type
      ),
      '*',
      $._simple_type
    )),

    constructed_type: $ => prec(PREC.app, seq(
      choice(
        $._simple_type,
        parenthesize(sep1(',', $._type))
      ),
      $.type_constructor_path
    )),

    aliased_type: $ => prec(PREC.match, seq(
      $._type,
      'as',
      $.type_variable
    )),

    polymorphic_variant_type: $ => choice(
      seq('[', optional('|'), sep1('|', $._tag_spec), ']'),
      seq('[>', optional('|'), sep('|', $._tag_spec), ']'),
      seq('[<', optional('|'), sep1('|', $._tag_spec), optional(seq('>', repeat1($.tag))), ']'),
    ),

    _tag_spec: $ => choice(
      $._simple_type,
      $.tag_specification
    ),

    tag_specification: $ => seq(
      $.tag,
      optional(seq(
        'of',
        optional('&'),
        sep1('&', $._type)
      )),
      repeat($.attribute)
    ),

    package_type: $ => parenthesize(seq(
      'module',
      optional($._extension_attribute),
      $._module_type
    )),

    parenthesized_type: $ => parenthesize($._type),

    // Expressions

    _expression: $ => prec.right(seq(
      choice(
        $._simple_expression,
        $.product_expression,
        $.cons_expression,
        $.application_expression,
        $.infix_expression,
        alias($._sign_expression, $.prefix_expression),
        $.set_expression,
        $.if_expression,
        $.while_expression,
        $.for_expression,
        $.match_expression,
        $.function_expression,
        $.fun_expression,
        $.try_expression,
        $.let_expression,
        $.assert_expression,
        $.lazy_expression,
        $.let_module_expression,
        $.let_open_expression,
        $.let_exception_expression,
        $.object_expression
      ),
      repeat($.attribute)
    )),

    _seq_expression: $ => choice(
      $._expression,
      $.sequence_expression
    ),

    _simple_pattern: $ => choice(
      $.value_name,
      $._signed_constant,
      $.typed_pattern,
      $.constructor_path,
      $.tag,
      $.polymorphic_pattern,
      $.record_pattern,
      $.list_pattern,
      $.array_pattern,
      $.local_open_pattern,
      $.package_pattern,
      $.parenthesized_pattern,
      $.extension
    ),

    _pattern: $ => prec.right(seq(
      choice(
        $._simple_pattern,
        $.alias_pattern,
        $.or_pattern,
        $.constructor_pattern,
        $.tag_pattern,
        $.tuple_pattern,
        $.cons_pattern,
        $.range_pattern,
        $.lazy_pattern
      ),
      repeat($.attribute)
    )),

    tuple_pattern: $ => prec.left(PREC.prod, seq(
      $._pattern,
      ',',
      $._pattern
    )),

    parenthesized_pattern: $ => parenthesize($._pattern),

    _extension_attribute: $ => prec.right(choice(
      seq('%', $.attribute_id),
      $.attribute,
      seq($._extension_attribute, repeat1($.attribute))
    )),

    // Constants

    _sign_operator: $ => choice('+', '-', '+.', '-.'),

    let_operator: $ => token(
      seq('let', /[$&*+\-/<=>@^|]/, repeat(OP_CHAR))
    ),

    value_name: $ => choice(
      $._identifier,
      parenthesize(choice(
        $.prefix_operator,
        alias($._sign_operator, $.infix_operator),
        $.infix_operator,
        seq(
          '.',
          $.indexing_operator,
          choice(
            seq('(', ')'),
            seq('[', ']'),
            seq('{', '}')
          ),
          optional('<-')
        ),
        $.let_operator,
        $.and_operator,
        $.match_operator
      ))
    ),

    value_path: $ => choice(
      $.value_name,
      seq($._module_name, '.', $.value_path)
    ),

    module_type_path: $ => choice(
      $._module_type_name,
      seq($._module_expression, '.', $._module_type_name)
    ),

    _extended_module_name: $ => seq(
      $._module_name,
      repeat(parenthesize($.module_path))
    ),

    module_path: $ => choice(
      $._extended_module_name,
      seq($._extended_module_name, '.', $.module_path)
    ),

    type_constructor_path: $ => choice(
      $._type_constructor,
      seq($._extended_module_name, '.', $.type_constructor_path)
    ),

    _label_name: $ => alias($._identifier, $.label_name),
    _type_constructor: $ => alias($._identifier, $.type_constructor),
    _module_name: $ => alias($._capitalized_identifier, $.module_name),
    _module_type_name: $ => alias(choice($._capitalized_identifier, $._identifier), $.module_type_name),
    _identifier: $ => /[a-z_][a-zA-Z0-9_']*/,
    _capitalized_identifier: $ => /[A-Z][a-zA-Z0-9_']*/,

    type_variable: $ => seq("'", choice($._identifier, $._capitalized_identifier)),
    tag: $ => seq('`', choice($._identifier, $._capitalized_identifier)),
    attribute_id: $ => sep1('.', choice($._identifier, $._capitalized_identifier))
  },
