test/corpus/module-types.txt
==============================
Module type path
==============================

module M : T
module M : M.T

---

(compilation_unit
  (module_definition
    (module_binding
      (module_name)
      module_type: (module_type_path
        (module_type_name))))
  (module_definition
    (module_binding
      (module_name)
      module_type: (module_type_path
        (extended_module_path
          (module_name))
        (module_type_name)))))

==============================
Signatures
==============================

module M : sig
  val x : t
end

---

(compilation_unit
  (module_definition
    (module_binding
      (module_name)
      module_type: (signature
        (value_specification
          (value_name)
          type: (type_constructor_path
            (type_constructor)))))))

==============================
Constraints
==============================

module M : T with type t = t and module M := M and module type T = T
module M : T with type t = t -> t
module M : T with type t = t as 'a -> t
module M : T with module type T = T -> T
module M : T with module type T := T -> T

---

(compilation_unit
  (module_definition
    (module_binding
      (module_name)
      module_type: (module_type_constraint
        module_type: (module_type_path
          (module_type_name))
        (constrain_type
          (type_constructor_path
            (type_constructor))
          equation: (type_constructor_path
            (type_constructor)))
        (constrain_module
          (module_path
            (module_name))
          constraint: (extended_module_path
            (module_name)))
        (constrain_module_type
          (module_type_path
            (module_type_name))
          constraint: (module_type_path
            (module_type_name))))))
  (module_definition
    (module_binding
      (module_name)
      module_type: (module_type_constraint
        module_type: (module_type_path
          (module_type_name))
        (constrain_type
          (type_constructor_path
            (type_constructor))
          equation: (function_type
            domain: (type_constructor_path
              (type_constructor))
            codomain: (type_constructor_path
              (type_constructor)))))))
  (module_definition
    (module_binding
      (module_name)
      module_type: (functor_type
        domain: (module_type_constraint
          module_type: (module_type_path
            (module_type_name))
          (constrain_type
            (type_constructor_path
              (type_constructor))
            equation: (aliased_type
              type: (type_constructor_path
                (type_constructor))
              alias: (type_variable))))
        codomain: (module_type_path
          (module_type_name)))))
  (module_definition
    (module_binding
      (module_name)
      module_type: (module_type_constraint
        module_type: (module_type_path
          (module_type_name))
        (constrain_module_type
          (module_type_path
            (module_type_name))
          constraint: (functor_type
            domain: (module_type_path
              (module_type_name))
            codomain: (module_type_path
              (module_type_name)))))))
  (module_definition
    (module_binding
      (module_name)
      module_type: (module_type_constraint
        module_type: (module_type_path
          (module_type_name))
        (constrain_module_type
          (module_type_path
            (module_type_name))
          constraint: (functor_type
            domain: (module_type_path
              (module_type_name))
            codomain: (module_type_path
              (module_type_name))))))))

==============================
Module type of
==============================

module M : module type of M

---

(compilation_unit
  (module_definition
    (module_binding
      (module_name)
      module_type: (module_type_of
        module: (module_path
          (module_name))))))

==============================
Functor types
==============================

module M : functor (M : T) -> T
module M : (M : T) (M : T) -> T
module M : T -> T -> T
module M : () -> T

---

(compilation_unit
  (module_definition
    (module_binding
      (module_name)
      module_type: (functor_type
        (module_parameter
          (module_name)
          module_type: (module_type_path
            (module_type_name)))
        codomain: (module_type_path
          (module_type_name)))))
  (module_definition
    (module_binding
      (module_name)
      module_type: (functor_type
        (module_parameter
          (module_name)
          module_type: (module_type_path
            (module_type_name)))
        (module_parameter
          (module_name)
          module_type: (module_type_path
            (module_type_name)))
        codomain: (module_type_path
          (module_type_name)))))
  (module_definition
    (module_binding
      (module_name)
      module_type: (functor_type
        domain: (module_type_path
          (module_type_name))
        codomain: (functor_type
          domain: (module_type_path
            (module_type_name))
          codomain: (module_type_path
            (module_type_name))))))
  (module_definition
    (module_binding
      (module_name)
      module_type: (functor_type
        (module_parameter)
        codomain: (module_type_path
          (module_type_name))))))

==============================
Parenthesized module types
==============================

module M : (T)

---

(compilation_unit
  (module_definition
    (module_binding
      (module_name)
      module_type: (parenthesized_module_type
        (module_type_path
          (module_type_name))))))
