test/corpus/ocaml_interface/module-specification.txt
==============================
Include
:language(ocaml_interface)
==============================

include M
include t
include M.M
include M.t
include M.M.M
include M.M.t
include functor () -> M

---

(compilation_unit
  (include_module_type
    module_type: (module_type_path
      (module_type_name)))
  (include_module_type
    module_type: (module_type_path
      (module_type_name)))
  (include_module_type
    module_type: (module_type_path
      (extended_module_path
        (module_name))
      (module_type_name)))
  (include_module_type
    module_type: (module_type_path
      (extended_module_path
        (module_name))
      (module_type_name)))
  (include_module_type
    module_type: (module_type_path
      (extended_module_path
        (extended_module_path
          (module_name))
        (module_name))
      (module_type_name)))
  (include_module_type
    module_type: (module_type_path
      (extended_module_path
        (extended_module_path
          (module_name))
        (module_name))
      (module_type_name)))
  (include_module_type
    module_type: (functor_type
      (module_parameter)
      codomain: (module_type_path
        (module_type_name)))))

==============================
Open
:language(ocaml_interface)
==============================

open M
open! M
open M(X).Y

---

(compilation_unit
  (open_module_signature
    module: (extended_module_path
      (module_name)))
  (open_module_signature
    module: (extended_module_path
      (module_name)))
  (open_module_signature
    module: (extended_module_path
      (extended_module_path
        (extended_module_path
          (module_name))
        (extended_module_path
          (module_name)))
      (module_name))))
